使用 Colaboratory 创建

--- a/cupoy_step1.ipynb
+++ b/cupoy_step1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "oeg2GVEGSXJf",
         "colab_type": "code",
-        "outputId": "a979c18e-1c26-4273-dbad-9ed46a3b9bed",
+        "outputId": "d140ac80-cb6d-4a7b-f599-ad3f0093d43b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -36,7 +36,7 @@
       },
       "cell_type": "code",
       "source": [
-        "! git clone https://jamiewu128@bitbucket.org/jamiewu128/cupoy.git"
+        "! git clone https://jamiewu128:012345678@bitbucket.org/jamiewu128/cupoy.git"
       ],
       "execution_count": 1,
       "outputs": [
@@ -44,11 +44,11 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'cupoy'...\n",
-            "remote: Counting objects: 14, done.\u001b[K\n",
-            "remote: Compressing objects: 100% (14/14), done.\u001b[K\n",
-            "remote: Total 14 (delta 3), reused 0 (delta 0)\u001b[K\n",
-            "Unpacking objects: 100% (14/14), done.\n",
-            "Checking out files: 100% (5/5), done.\n"
+            "remote: Counting objects: 30, done.\u001b[K\n",
+            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
+            "remote: Total 30 (delta 13), reused 0 (delta 0)\u001b[K\n",
+            "Unpacking objects: 100% (30/30), done.\n",
+            "Checking out files: 100% (15/15), done.\n"
           ],
           "name": "stdout"
         }
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "zZbHZxYlcxwG",
         "colab_type": "code",
-        "outputId": "df406f72-98e2-451d-a49c-bc01c3122b82",
+        "outputId": "4038e18d-6c68-4f39-e516-55e35f1143d2",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/colabwidgets/controls.min.js": {
@@ -152,12 +152,12 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 139
+          "height": 321
         }
       },
       "cell_type": "code",
       "source": [
-        "otherdf=pd.read_csv('cupoy/All_14class.csv')\n",
+        "otherdf=pd.read_csv('cupoy/single_label.csv')\n",
         "content=otherdf['content']\n",
         "sentences = []\n",
         "for i in tqdm_notebook(range(len(content))):\n",
@@ -165,15 +165,16 @@
         "    sentences.append(jieba.analyse.extract_tags(tt, topK=100, withWeight=False, allowPOS=()))\n",
         "    \n",
         "other=pd.DataFrame({'content':sentences,'topic':otherdf['topic'],'idx':otherdf.index.values})\n",
-        "other.to_csv('cupoy/single_label_top100.csv',index=False)"
+        "other.to_csv('cupoy/single_label_top100.csv',index=False)\n",
+        "other.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e81d821d2417416ca5e07775c1fbe354",
+              "model_id": "bad991dae7f345ed9eadc6edc2094262",
               "version_minor": 0,
               "version_major": 2
             },
@@ -190,7 +191,7 @@
           "text": [
             "Building prefix dict from /content/cupoy/dict.txt ...\n",
             "Dumping model to file cache /tmp/jieba.u5bf2be9440e3c670786f4bb0579e94ee.cache\n",
-            "Loading model cost 0.912 seconds.\n",
+            "Loading model cost 0.922 seconds.\n",
             "Prefix dict has been built succesfully.\n"
           ],
           "name": "stderr"
@@ -201,6 +202,82 @@
             "\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>content</th>\n",
+              "      <th>idx</th>\n",
+              "      <th>topic</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>[JAPANESE, TIP, photo, YASAKA, Mariko, Photo, ...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>[藝術, 劉得浪, 2018, 新聞, 01, 非池, 尊彩, 藝術家, 網攝, 臺灣, 繪...</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>[韓國, miss, 咖啡廳, 日本, 美食, PINKY, 89, cafe.89, ma...</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>[愛麗森, 貓咪, 小學堂, 景點, XD, 雲林, 旅遊, 彩繪村, 01, 彩繪, 變身...</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>[玩家, 青蛙, 旅程, 牠們, 遊戲, 展開, 禮物, 回來, 日本, 道具, 旅行, 下...</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                             content  idx  topic\n",
+              "0  [JAPANESE, TIP, photo, YASAKA, Mariko, Photo, ...    0      1\n",
+              "1  [藝術, 劉得浪, 2018, 新聞, 01, 非池, 尊彩, 藝術家, 網攝, 臺灣, 繪...    1      1\n",
+              "2  [韓國, miss, 咖啡廳, 日本, 美食, PINKY, 89, cafe.89, ma...    2      1\n",
+              "3  [愛麗森, 貓咪, 小學堂, 景點, XD, 雲林, 旅遊, 彩繪村, 01, 彩繪, 變身...    3      1\n",
+              "4  [玩家, 青蛙, 旅程, 牠們, 遊戲, 展開, 禮物, 回來, 日本, 道具, 旅行, 下...    4      1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     },
@@ -229,17 +306,17 @@
       "metadata": {
         "id": "uf1rNniYfOaW",
         "colab_type": "code",
+        "outputId": "87934096-49aa-48f3-b32d-4bd581046193",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "87934096-49aa-48f3-b32d-4bd581046193"
+        }
       },
       "cell_type": "code",
       "source": [
         "unknow.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +444,7 @@
         "print(cc['topic'])\n",
         "cc['content']"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,7 +543,7 @@
         "\n",
         "print('drop count=',len(drop_idx))"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +642,7 @@
         "    \n",
         "df.info()"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,17 +677,17 @@
       "metadata": {
         "id": "8fVKB39MeJaT",
         "colab_type": "code",
+        "outputId": "21d6e754-cde9-45f6-f45a-703dd81066cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "21d6e754-cde9-45f6-f45a-703dd81066cf"
+        }
       },
       "cell_type": "code",
       "source": [
         "df.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -744,17 +821,17 @@
       "metadata": {
         "id": "Aaxndigufn_4",
         "colab_type": "code",
+        "outputId": "cf1ccfc8-14f4-43aa-c61b-fac0bb9482b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "cf1ccfc8-14f4-43aa-c61b-fac0bb9482b6"
+        }
       },
       "cell_type": "code",
       "source": [
         ""
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +943,7 @@
         "word_index = tokenizer.word_index                   \n",
         "print('Found %s unique tokens.' % len(word_index))   "
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -903,7 +980,7 @@
         "print('Shape of data tensor:', x_train_data.shape)\n",
         "print('Shape of label tensor:', train_labels.shape)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -941,7 +1018,7 @@
         "model.add(Dense(train_labels.shape[1], activation='softmax'))\n",
         "model.summary()"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -992,7 +1069,7 @@
         "\n",
         "model.fit(x_train_data, train_labels, validation_data=(x_test_data, test_labels), epochs=4, batch_size=128,callbacks=[earlystop])"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,11 +1127,11 @@
       "metadata": {
         "id": "N21IOWDTu_Tv",
         "colab_type": "code",
+        "outputId": "eb036907-ecf1-4b76-c7cc-89abf635b37e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "eb036907-ecf1-4b76-c7cc-89abf635b37e"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1068,7 +1145,7 @@
         "\n",
         "print(pred_y)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1083,11 +1160,11 @@
       "metadata": {
         "id": "DUwZW6QPoC7j",
         "colab_type": "code",
+        "outputId": "3ef321fe-927b-4088-c483-94e9891d0b02",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "3ef321fe-927b-4088-c483-94e9891d0b02"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1099,7 +1176,7 @@
         "result.head()\n",
         "result.to_csv('cupoy/label_fixed_data.csv',index=False)"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,17 +1199,17 @@
       "metadata": {
         "id": "1AiK5vRQqSQT",
         "colab_type": "code",
+        "outputId": "2b80331a-f6bc-41a8-9841-422367435bf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "2b80331a-f6bc-41a8-9841-422367435bf6"
+        }
       },
       "cell_type": "code",
       "source": [
         "result.head()"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
