使用 Colaboratory 创建

--- a/cupoy_step1.ipynb
+++ b/cupoy_step1.ipynb
@@ -289,7 +289,7 @@
       },
       "cell_type": "code",
       "source": [
-        "unknowdf=pd.read_csv('cupoy/unknow_class.csv')\n",
+        "unknowdf=pd.read_csv('cupoy/no_label_data_top100.csv')\n",
         "content=unknowdf['content']\n",
         "sentences = []\n",
         "for i in tqdm_notebook(range(len(content))):\n",
@@ -297,7 +297,7 @@
         "    sentences.append(jieba.analyse.extract_tags(tt, topK=100, withWeight=False, allowPOS=()))\n",
         "    \n",
         "unknow=pd.DataFrame({'content':sentences,'idx':unknowdf.index.values})\n",
-        "unknow.to_csv('cupoy/unknow_class_top100.csv',index=False)"
+        "unknow.to_csv('cupoy/no_label_data_top100.csv',index=False)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1168,7 +1168,7 @@
       },
       "cell_type": "code",
       "source": [
-        "dupdf=pd.read_csv('cupoy/unknow_class.csv')\n",
+        "dupdf=pd.read_csv('cupoy/no_label_data.csv')\n",
         "print(len(pred_y))\n",
         "print(len(dupdf['content']))\n",
         "result=pd.DataFrame({'topic':pred_y,'content':dupdf['content']})\n",
