使用 Colaboratory 创建

--- a/cupoy_step2.ipynb
+++ b/cupoy_step2.ipynb
@@ -32,7 +32,7 @@
       },
       "cell_type": "code",
       "source": [
-        "! git clone https://jamiewu128@bitbucket.org/jamiewu128/cupoy.git"
+        "! git clone https://jamiewu128:012345678@bitbucket.org/jamiewu128/cupoy.git"
       ],
       "execution_count": 0,
       "outputs": []
@@ -100,7 +100,7 @@
       },
       "cell_type": "code",
       "source": [
-        "df1=pd.read_csv('cupoy/All_14class.csv')\n",
+        "df1=pd.read_csv('cupoy/single_label.csv')\n",
         "df2=pd.read_csv('cupoy/label_fixed_data.csv')\n",
         "df1=pd.DataFrame({'content':df1['content'],'topic':df1['topic']})\n",
         "df2=pd.DataFrame({'content':df2['content'],'topic':df2['topic']})\n",
@@ -115,17 +115,17 @@
       "metadata": {
         "id": "tu9hQN08unme",
         "colab_type": "code",
+        "outputId": "fcd29b73-43e1-4749-d5fb-88fbb42b451a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "fcd29b73-43e1-4749-d5fb-88fbb42b451a"
+        }
       },
       "cell_type": "code",
       "source": [
         "df.head()"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,6 +213,7 @@
       "metadata": {
         "id": "mn2wxrh-rkfN",
         "colab_type": "code",
+        "outputId": "7351d21e-61de-46e1-87d1-f022eb3d325c",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/colabwidgets/controls.min.js": {
@@ -242,8 +243,7 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 134
-        },
-        "outputId": "7351d21e-61de-46e1-87d1-f022eb3d325c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -257,7 +257,7 @@
         "df=pd.DataFrame({'content':sentences,'topic':df['topic'],'idx':df.index.values})\n",
         "df.to_csv('cupoy/final_all_top100.csv',index=False)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -365,11 +365,11 @@
       "metadata": {
         "id": "xrKk2PaiHSZ7",
         "colab_type": "code",
+        "outputId": "ec316167-5c09-4edb-d0a0-04fd7a0e1f0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1224
-        },
-        "outputId": "ec316167-5c09-4edb-d0a0-04fd7a0e1f0f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -401,7 +401,7 @@
         "\n",
         "print('drop count=',len(drop_idx))"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,11 +486,11 @@
       "metadata": {
         "id": "R7SijFhrI_mk",
         "colab_type": "code",
+        "outputId": "58c1eeae-6556-4e46-b5ff-5b26f7033b72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
-        },
-        "outputId": "58c1eeae-6556-4e46-b5ff-5b26f7033b72"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -501,7 +501,7 @@
         "df.info()\n",
         "df.to_csv('cupoy/final_all_top100_noise_removed.csv',index='False')"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,11 +584,11 @@
       "metadata": {
         "id": "Q_9BIlotKCLu",
         "colab_type": "code",
+        "outputId": "8fef2cbd-c0ec-41b1-cb67-821b3d1057ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 561
-        },
-        "outputId": "8fef2cbd-c0ec-41b1-cb67-821b3d1057ad"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -628,7 +628,7 @@
         "traindf.to_csv('cupoy/final_all_top100_noise_removed_Train.csv',index=False)\n",
         "testdf.to_csv('cupoy/final_all_top100_noise_removed_Test.csv',index=False)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +716,7 @@
         "word_index = tokenizer.word_index                   \n",
         "print('Found %s unique tokens.' % len(word_index))   "
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,7 +754,7 @@
         "print('Shape of data tensor:', x_train_data.shape)\n",
         "print('Shape of label tensor:', train_labels.shape)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,11 +770,11 @@
       "metadata": {
         "id": "mCxts5bONDp7",
         "colab_type": "code",
+        "outputId": "d1ccf54a-be2c-4deb-820b-5f6d741855c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 496
-        },
-        "outputId": "d1ccf54a-be2c-4deb-820b-5f6d741855c8"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -792,7 +792,7 @@
         "model.add(Dense(train_labels.shape[1], activation='softmax'))\n",
         "model.summary()"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -833,11 +833,11 @@
       "metadata": {
         "id": "_CorIIUONKTT",
         "colab_type": "code",
+        "outputId": "85c97fdf-a728-449c-f3bd-d6750efc8929",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 377
-        },
-        "outputId": "85c97fdf-a728-449c-f3bd-d6750efc8929"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -853,7 +853,7 @@
         "\n",
         "model.fit(x_train_data, train_labels, validation_data=(x_test_data, test_labels), epochs=8, batch_size=128,callbacks=[earlystop,mcp_save,reduce_lr_loss])"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,11 +898,11 @@
       "metadata": {
         "id": "hLnImxEJRgLM",
         "colab_type": "code",
+        "outputId": "38f3fda2-1cdd-4de6-cc1d-b07b0c9019bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "38f3fda2-1cdd-4de6-cc1d-b07b0c9019bc"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -910,7 +910,7 @@
         "print('Private testing score:', score[0])\n",
         "print('Private testing accuracy:', score[1])"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -939,17 +939,17 @@
       "metadata": {
         "id": "QsBhTQQIue7M",
         "colab_type": "code",
+        "outputId": "89c00b2f-b38d-4236-c11e-fb922b7d7796",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "89c00b2f-b38d-4236-c11e-fb922b7d7796"
+        }
       },
       "cell_type": "code",
       "source": [
         "#! git push origin master"
       ],
-      "execution_count": 111,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
